hermes_fuzz_executed_few_shot_v2/fuzz_62_execution
'use strict';
var bar1, bar3;
bar1 = {x: 2, y: true, z: 3, a: 'a', b: {c: 'c', d: 'd'}, e: {f: 'f'}, g: () => {bar1.z = 17; return bar1}};
bar3 = {x: 2, y: true, z: 4, a: 'b', b: false, c: 10};
bar1.z;
bar3.z;
 
'use strict';
var bar3 = {x: 2, y: true, z: 4, a: 'b', b: false, c: 10},
    bar2 = [bar3];
bar1.z;
bar3.z;
bar1.z = 17;
bar1.z;
bar1.x;
bar2.unshift(Object.freeze({x: 10}));
bar3;
bar2;

 
'use strict';
const {createNativeWrapper} = require('react-native-bridge-core/RNWrapper');
 
function createModule(data) {
     
     

Execution Output ------------------:
test.js:26:6: error: '}' expected at end of block
     
     ^
test.js:24:29: note: block starts here
function createModule(data) {
                            ^
